feat: 수익률 출력 메서드 구현